log/build_2025-05-19_21-19-07/rknn_yolo/stderr.log
  File "/home/orangepi/car_ros2/install/rknn_yolo/lib/python3.10/site-packages/rknn_yolo/lib/handle_logic.py", line 472
    else :
    ^^^^
SyntaxError: invalid syntax

